--- a/kwitter_room.html
+++ b/kwitter_room.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kwitter Room</title>
+	<title>Let's Chat Web Room</title>
 <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
@@ -22,7 +22,7 @@
 	Logout</button>
 	<center>
 		<h1 class="header">	
-			Kwitter	
+			Let's Chat	
 			<sup>
 				<img src="m2.png">
 			</sup>
